--- a/FKW/index.html
+++ b/FKW/index.html
@@ -10,11 +10,25 @@
     <title>FKW</title>
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
-    <link
-      href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;800&display=swap"
-      rel="stylesheet"
-    />
-    <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Rounded:opsz,wght,FILL,GRAD@48,400,0,0" />
+    <!-- LOAD CSS -->
+<script type="text/javascript">//<![CDATA[
+  (function() {
+      var css = document.createElement('link');
+      css.href = 'https://fonts.googleapis.com/css2?family=Poppins:wght@400;800&display=swap';
+      css.rel = 'stylesheet';
+      css.type = 'text/css';
+      document.getElementsByTagName('head')[0].appendChild(css);
+  })();
+  //]]></script> 
+  <script type="text/javascript">//<![CDATA[
+  (function() {
+      var css = document.createElement('link');
+      css.href = 'https://fonts.googleapis.com/css2?family=Material+Symbols+Rounded:opsz,wght,FILL,GRAD@48,400,0,0';
+      css.rel = 'stylesheet';
+      css.type = 'text/css';
+      document.getElementsByTagName('head')[0].appendChild(css);
+  })();
+  //]]></script> 
     <link rel="stylesheet" href="style.css" />
     <script src="script.js" defer></script>
     <script src="script2.js" defer></script>
@@ -46,25 +60,25 @@
       <div class="container" id="beranda">
         <section>
         <div class="left">
-          <img oncontextmenu="return false" src="https://res.cloudinary.com/dcmo2r3d9/image/upload/v1717737021/FKWLogo_gmqquv.webp" alt="Logo FKW" loading="lazy" id="logoheader"/>
+          <img oncontextmenu="return false" src="https://res.cloudinary.com/dcmo2r3d9/image/upload/v1720868979/FKWLogo500_sm57yx.png" alt="Logo FKW" loading="eager" id="logoheader"/>
           <h1>Festival Karma Wairagya</h1>
           <p>
             Festival Karma Wairagya merupakan sebuah festival yang diadakan setiap tahun untuk memeriahkan hari ulang tahun SMA Negeri 9 Denpasar.
           </p>
 
           <div class="buttons">
-            <a href="https://www.instagram.com/festivalkarmawairagya" target="_blank" class="link-btn">
+            <a href="https://www.instagram.com/festivalkarmawairagya" target="_blank" class="link-btn" aria-label="Instagram">
               <div class="btn-icon">
-                <img src="https://res.cloudinary.com/dcmo2r3d9/image/upload/v1717737021/instagram-logo_pfiwzf.svg" alt="" />
+                <img alt="Instagram" src="https://res.cloudinary.com/dcmo2r3d9/image/upload/v1717737021/instagram-logo_pfiwzf.svg" alt="" />
               </div>
               <div class="btn-text">
                 <div id="textbtn">Instagram</div>
               </div>
             </a>
 
-            <a href="https://www.youtube.com/@festivalkarmawairagya" target="_blank" class="link-btn">
+            <a href="https://www.youtube.com/@festivalkarmawairagya" target="_blank" class="link-btn" aria-label="Youtube">
               <div class="btn-icon">
-                <img src="https://res.cloudinary.com/dcmo2r3d9/image/upload/v1717737021/youtube-logo_nxvwfj.svg" alt="" />
+                <img alt="Youtube" src="https://res.cloudinary.com/dcmo2r3d9/image/upload/v1717737021/youtube-logo_nxvwfj.svg" alt="" />
               </div>
               <div class="btn-text">
                 <div id="textbtn">Youtube</div>
@@ -74,7 +88,7 @@
         </div>
       </section>
         <div class="right">
-          <img oncontextmenu="return false" src="https://res.cloudinary.com/dcmo2r3d9/image/upload/v1719480246/FKWLogoA_t1s4lx.webp" alt="FKW Logo" loading="lazy"  id="headerlogo" />
+          <img oncontextmenu="return false" src="https://res.cloudinary.com/dcmo2r3d9/image/upload/v1719480246/FKWLogoA_t1s4lx.webp" alt="FKW Logo" loading="eager"  id="headerlogo" />
         </div>
       </div>
     </header>
@@ -83,18 +97,18 @@
       <section id="poto">
         <div class="content">
           <div class="pic">
-            <img oncontextmenu="return false" src="https://res.cloudinary.com/dcmo2r3d9/image/upload/v1717737019/Foto1_klsiy7.webp" loading="lazy" id="potoh"/>
-            <img oncontextmenu="return false" src="https://res.cloudinary.com/dcmo2r3d9/image/upload/v1717737020/Foto2_l6k1za.webp" loading="lazy" id="potoh"/>
-            <img oncontextmenu="return false" src="https://res.cloudinary.com/dcmo2r3d9/image/upload/v1717737021/Foto3_tgac0l.webp" loading="lazy" id="potoh"/>
-            <img oncontextmenu="return false" src="https://res.cloudinary.com/dcmo2r3d9/image/upload/v1717737021/Foto4_pypgdd.webp" loading="lazy" id="potoh"/>
-            <img oncontextmenu="return false" src="https://res.cloudinary.com/dcmo2r3d9/image/upload/v1717737021/Foto5_jfkykt.webp" loading="lazy" id="potoh"/>
+            <img oncontextmenu="return false" src="https://res.cloudinary.com/dcmo2r3d9/image/upload/v1717737019/Foto1_klsiy7.webp" loading="lazy" id="potoh" alt="FotoFKW"/>
+            <img oncontextmenu="return false" src="https://res.cloudinary.com/dcmo2r3d9/image/upload/v1717737020/Foto2_l6k1za.webp" loading="lazy" id="potoh" alt="FotoFKW"/>
+            <img oncontextmenu="return false" src="https://res.cloudinary.com/dcmo2r3d9/image/upload/v1717737021/Foto3_tgac0l.webp" loading="lazy" id="potoh" alt="FotoFKW"/>
+            <img oncontextmenu="return false" src="https://res.cloudinary.com/dcmo2r3d9/image/upload/v1717737021/Foto4_pypgdd.webp" loading="lazy" id="potoh" alt="FotoFKW"/>
+            <img oncontextmenu="return false" src="https://res.cloudinary.com/dcmo2r3d9/image/upload/v1717737021/Foto5_jfkykt.webp" loading="lazy" id="potoh" alt="FotoFKW"/>
           </div>
         </div>
       </section>
       <section id="tentang-kami"></section>
-      <div class="hp"><img oncontextmenu="return false" id="hp2"src="https://res.cloudinary.com/dcmo2r3d9/image/upload/v1720340842/FKWElemen_u4ioa2.webp" alt=""></div>
+      <div class="hp"><img oncontextmenu="return false" id="hp2"src="https://res.cloudinary.com/dcmo2r3d9/image/upload/v1720870071/FKWElemen_dkrcjj.png" alt="Elemen FKW"></div>
       <section id="tentang">
-        <div class="left"><img oncontextmenu="return false" src="https://res.cloudinary.com/dcmo2r3d9/image/upload/v1720340842/FKWElemen_u4ioa2.webp" loading="lazy"></div>
+        <div class="left"><img oncontextmenu="return false" src="https://res.cloudinary.com/dcmo2r3d9/image/upload/v1720870071/FKWElemen_dkrcjj.png" alt="Elemen FKW"></div>
         <div class="right">
           <p>Festival Karma Wairagya (FKW) merupakan sebuah festival yang diadakan setiap tahun untuk memeriahkan hari ulang tahun SMA Negeri 9 Denpasar. 
             Tujuan lain diadakannya festival ini yaitu untuk meningkatkan kemampuan siswa dan siswi untuk berkreativitas, melestarikan dan menonjolkan nilai
@@ -107,7 +121,7 @@
 
         <div id="trabaju">
           <div class="transisi"><video autoplay loop muted controls id="transisi" src="https://res.cloudinary.com/dcmo2r3d9/video/upload/v1717737830/transisi_ilso4z.mp4"></video></div>
-          <div class="baju"><img oncontextmenu="return false" src="https://res.cloudinary.com/dcmo2r3d9/image/upload/v1717737020/desainbaju_x32f2v.webp" id="baju" loading="lazy"></div>
+          <div class="baju"><img oncontextmenu="return false" src="https://res.cloudinary.com/dcmo2r3d9/image/upload/v1717737020/desainbaju_x32f2v.webp" id="baju" loading="lazy" alt="Desain Baju FKW"></div>
         </div>
 
       <div id="galeri">
@@ -378,8 +392,8 @@
         <div class="copyright">
           <p>Powered by Tim Industri Digital FKW © 2024</p>
           <div class="socials">
-            <a href="https://www.instagram.com/festivalkarmawairagya" target="_blank"><img src="images/instagram-logo.svg" alt="" /></a>
-            <a href="https://www.youtube.com/@festivalkarmawairagya" target="_blank"><img src="images/youtube-logo.svg" alt="" /></a>
+            <a href="https://www.instagram.com/festivalkarmawairagya" target="_blank"><img alt="Instagram" src="image/instagram-logo.svg" /></a>
+            <a href="https://www.youtube.com/@festivalkarmawairagya" target="_blank"><img alt="Youtube" src="image/youtube-logo.svg" /></a>
           </div>
         </div>
       </div>
